<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/EditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="" />

            <Button
                android:id="@+id/newLesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ClearEditText"
                android:text="@string/newLessonSmol" />
        </LinearLayout>

        <Button
            android:id="@+id/battonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDelete"
            android:onClick="BattonRemove"
            />
        <Button
            android:id="@+id/saveLesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SaveLesson"
            android:text="@string/saveBatton" />

        <Button
            android:id="@+id/battonReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ReturnActivity"
            android:text="@string/battonReturn" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>