<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".studyActivity"
    android:id="@+id/stydyLayout">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textSize="18dp" />
    <!--android:Text="header"-->


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/moveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="moveToPosition"
                android:text="Переход к слову " />

            <EditText
                android:id="@+id/editPostText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>

    <TextView
        android:id="@+id/positionWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="positionWord" />

    <TextView
            android:id="@+id/engTexView"
            style="@style/studyActivityTextVew"

            android:hint="@string/englishWord" />

        <TextView
            android:id="@+id/transTexView"
            style="@style/studyActivityTextVew"
            android:hint="@string/transcription" />

        <TextView
            android:id="@+id/rusTexView"
            style="@style/studyActivityTextVew"
            android:hint="@string/russianWord" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:onClick="previousStep"
                android:text="@string/battonPrew" />

            <!-- android:layout_weight="1" -->

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextStep"
                android:text="@string/battonNext"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="previousLayout"
            android:text="Вернуться" />

</LinearLayout>