<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".checkActivity"
    android:id="@+id/checkLayout">



    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textSize="18dp" />
    <!--android:Text="header"-->

    <TextView
        android:id="@+id/positionWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="positionWord" />

    <TextView
        android:id="@+id/textViewUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/studyActivityTextVew"
        android:text="TextView" />

    <EditText
        android:id="@+id/editTextDown_Check"
        style="@style/studyActivityTextVew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterWord"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="previousWord"
            android:layout_weight="1"
            android:text="@string/battonPrew" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="nextWord"
            android:layout_weight="1"
            android:text="@string/battonNext" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="previousLayout"
        android:text="Вернуться" />

</LinearLayout>