<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity_words_from_CSV"
    tools:showIn="@layout/activity_words_from__csv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:hint="TextView" />

            <Button
                android:id="@+id/buttonChoiceFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" ... " />

        </LinearLayout>

        <Button
            android:id="@+id/buttonReadCSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonReadCSV" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewChoiceLesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:hint="TextView" />

            <Button
                android:id="@+id/buttonChoiceLesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battonChoiceLesson" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonDownloadCSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonDownloadCSV" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>